# NativPlayer

./: CMakeLists.txt  LICENSE  README.md  nativplayer-artifact.txt  quick_build.bat  setup.bat
app/: app_metadata.cpp  app_metadata.h  application.cpp  application.h  application_bootstrap.cpp  application_diagnostics.cpp  application_internal.h  application_open_commands.cpp  application_playlist_runtime.cpp  application_screenshot.cpp  application_state_sync.cpp  application_update.cpp  command_line.cpp  command_line.h  end_of_playback_policy.cpp  end_of_playback_policy.h  main.cpp  media_file_types.cpp  media_file_types.h  media_history.cpp  media_history.h  media_playlist.cpp  media_playlist.h  media_source.cpp  media_source.h  mpv_runtime_bootstrap.cpp  mpv_runtime_bootstrap.h  mpv_runtime_license_prompt.cpp  mpv_runtime_license_prompt.h  mpv_runtime_license_prompt_text.cpp  mpv_runtime_license_prompt_text.h  mpv_runtime_release_asset.cpp  mpv_runtime_release_asset.h  playlist_storage.cpp  playlist_storage.h  quick_browse_catalog.cpp  quick_browse_catalog.h  release_update.cpp  release_update.h  replay_selection_policy.cpp  (+5 more)
build-clang/: nativplayer_icon.res
common/: hex_color.cpp  hex_color.h  http_download.cpp  http_download.h  portable_executable.cpp  portable_executable.h  sha256.cpp  sha256.h  text_encoding.h
config/: app_config_defaults.cpp  app_config_normalizer.cpp  config_ini_keys.h  config_parser.cpp  config_serializer.cpp  config_service.cpp  config_service.h  config_service_internal.h  default_language_hint.cpp  default_language_hint.h  subtitle_position_utils.cpp  subtitle_position_utils.h
diagnostics/: crash_dump.cpp  crash_dump.h  logger.cpp  logger.h  performance_report.cpp  performance_report.h  process_memory.cpp  process_memory.h  release_gate.cpp  release_gate.h  session_recovery.cpp  session_recovery.h  startup_metrics.cpp  startup_metrics.h  system_report.cpp  system_report.h
include/mpv/: client.h
installer/: NativPlayer.iss
installer/languages/: ChineseSimplified.isl  ChineseTraditional.isl
localization/: localization.cpp  localization.h
platform/win32/: input_profile.cpp  input_profile.h  input_router.cpp  input_router.h  window_host.cpp  window_host.h
playback/: command_dispatcher.cpp  command_dispatcher.h  end_file_reason.cpp  end_file_reason.h  low_latency_seek.cpp  low_latency_seek.h  mpv_loader.cpp  mpv_loader.h  mpv_player.cpp  mpv_player.h  mpv_runtime_paths.cpp  mpv_runtime_paths.h  mpv_runtime_probe.cpp  mpv_runtime_probe.h  mpv_runtime_provenance.cpp  mpv_runtime_provenance.h  player_thread.cpp  player_thread.h  seek_optimization_profile.cpp  seek_optimization_profile.h  state_normalizer.cpp  state_normalizer.h  subtitle_layout.cpp  subtitle_layout.h  video_filter_profile.cpp  video_filter_profile.h
release/: README.en.md  README.zh-CN.md  README.zh-TW.md
scripts/: build-clang.ps1  build-installer.ps1  build-latest-exe.ps1  copilot-build-player-latest.ps1  export-clean-release.ps1  manual-build-headless.ps1  manual-build-player.ps1  register-shell-integration.ps1  run-release-gate.ps1  sync-app-icon.ps1  unregister-shell-integration.ps1
tests/: application_scenarios.cpp  config_scenarios.cpp  diagnostics_scenarios.cpp  headless_test_kit.cpp  playlist_scenarios.cpp  scenario_runner.cpp  scenario_runner.h  scenario_runner_internal.h  seek_optimization_scenarios.cpp  settings_scenarios.cpp  ui_scenarios.cpp
tests/samples/: README.md
ui/: app_icon.cpp  app_icon.h  button_style_assets.cpp  button_style_assets.h  button_visuals.cpp  button_visuals.h  combo_box_utils.cpp  combo_box_utils.h  control_value_formats.cpp  control_value_formats.h  design_tokens.cpp  design_tokens.h  error_messages.cpp  error_messages.h  main_window.cpp  main_window.h  main_window_controls.cpp  main_window_draw.cpp  main_window_internal.h  main_window_layout.cpp  main_window_layout.h  main_window_layout_runtime.cpp  main_window_menu.cpp  main_window_messages.cpp  main_window_overlays.cpp  main_window_quick_browse.cpp  player_state.cpp  player_state.h  preview_session.cpp  preview_session.h  quick_browse_panel.cpp  quick_browse_panel.h  seek_preview_popup.cpp  seek_preview_popup.h  settings_dialog.cpp  settings_dialog.h  settings_dialog_advanced_page.cpp  settings_dialog_audio_outputs.cpp  settings_dialog_audio_page.cpp  settings_dialog_draw.cpp  (+21 more)
